# claude-code-python_rewrite

./: .gitignore  CHANGELOG.md  CLAUDE_example.md  CONTRIBUTING.md  FEATURE_LIST.md  LICENSE  MANIFEST.in  README.md  counter.py  pyproject.toml  requirements.txt
.clawd/skills/: config.json
.github/: FUNDING.yml
docs/guide/: SETUP_GUIDE.md  TESTING.md
docs/i18n/: README_AR.md  README_FR.md  README_HI.md  README_PT.md  README_RU.md
src/: __init__.py  cli.py  commands.py  config.py  permissions.py  repl.py  token_estimation.py  tool_pool.py
src/agent/: __init__.py  conversation.py  session.py
src/command_system/: __init__.py  argument_substitution.py  builtins.py  engine.py  registry.py  skills_integration.py  types.py
src/compact_service/: messages.py  service.py
src/context_system/: __init__.py  builder.py  claude_md.py  context_analyzer.py  git_context.py  microcompact.py  models.py  workspace_snapshot.py
src/outputStyles/: __init__.py  loader.py  styles.py
src/providers/: __init__.py  anthropic_provider.py  base.py  glm_provider.py  minimax_provider.py  openai_compatible.py  openai_provider.py
src/repl/: __init__.py  core.py
src/skills/: __init__.py  argument_substitution.py  (+4 more)
tests/: test_agent_loop.py  test_claude_code_tool_parity.py  test_command_system.py  test_compact_service.py  test_config.py  test_context_analyzer.py  test_context_system.py  test_legacy_repl_module.py  test_microcompact.py  test_output_styles.py  test_permissions.py  test_providers.py  test_repl.py  test_skills_system.py  test_token_estimation.py  test_tool_system_tools.py
(+43 files in other folders)
